# llm-log

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  query_test.jsonl  scoped_test.jsonl  test_calls.jsonl
build_check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_log.vcxproj  basic_log.vcxproj.filters  cmake_install.cmake  llm_log_examples.sln  query_log.vcxproj  query_log.vcxproj.filters  scoped_call.vcxproj  scoped_call.vcxproj.filters
build_check/basic_log.dir/Release/: basic_log.exe.recipe
build_check/basic_log.dir/Release/basic_log.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_check/query_log.dir/Release/: query_log.exe.recipe
build_check/query_log.dir/Release/query_log.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_check/scoped_call.dir/Release/: scoped_call.exe.recipe
build_check/scoped_call.dir/Release/scoped_call.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_check/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_check/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
examples/: basic_log.cpp  query_log.cpp  scoped_call.cpp
include/: llm_log.hpp
(+4 files in other folders)
