cmake_minimum_required(VERSION 3.16)
project(llm_log_examples CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Werror)
endif()
foreach(ex basic_log scoped_call query_log)
    add_executable(${ex} examples/${ex}.cpp)
    target_include_directories(${ex} PRIVATE include)
endforeach()
